# flowmo-rs

./: Cargo.toml  README.md
.github/workflows/: releases.yml
src/: key_handler.rs  main.rs  notification.rs  view.rs
