[package]
name = "flowmoo"
version = "0.2.3"
authors = ["yuizho <yuizho3@gmail.com>", "duykhanh471"]
edition = "2021"
license = "MIT"
description = "A simple CLI timer using flowtime technique."
readme = "README.md"
keywords = ["cli", "pomodoro"]
categories = ["command-line-utilities"]

[dependencies]
failure = "0.1.8"
exitfailure = "0.5.1"
spin_sleep = "1.0.0"
termion = "1.5.5"
notify-rust = "4.0.0"
