[package]
name = "flowmoo"
version = "0.1.3"
authors = ["duykhanh471"]
edition = "2021"
license = "Unlicense"
description = "A simple CLI timer using flowtime technique"
readme = "README.md"
keywords = ["cli", "pomodoro"]
categories = ["command-line-utilities"]

[dependencies]
failure = "0.1.8"
exitfailure = "0.5.1"
spin_sleep = "1.0.0"
termion = "4.0.5"
notify-rust = "4.0.0"
